kube/server/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nextcrm
  namespace: ynoacamino

spec:
  selector:
    app: nextcrm
  ports:
    - name: http
      port: 80
      targetPort: 3000
