kube/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nextcrm
  namespace: ynoacamino
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - nextcrm.ynoacamino.me
      secretName: nextcrm-tls
  rules:
    - host: nextcrm.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcrm
                port:
                  number: 80
